--- a/vncviewer.desktop
+++ b/vncviewer.desktop
@@ -1,7 +1,9 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=TigerVNC Viewer
+Name[fr]=Visionneur TigerVNC
 Comment=Connect to VNC server and display remote desktop
+Comment[fr]=Se connecter à un serveur VNC et afficher le bureau distant
 Exec=/usr/bin/vncviewer
 Icon=tigervnc
 Terminal=false
