- update to r4113 - patches merged - tigervnc11-rh586406.patch - tigervnc11-libvnc.patch - tigervnc11-rh597172.patch - tigervnc11-rh600070.patch - tigervnc11-options.patch - don't own %%{_datadir}/icons directory (#614301) - minor improvements in the .desktop file (#616340)

--- a/vncviewer.desktop
+++ b/vncviewer.desktop
@@ -1,5 +1,4 @@
 [Desktop Entry]
-Encoding=UTF-8
 Name=TigerVNC Viewer
 Name[fr]=Visionneur TigerVNC
 Comment=Connect to VNC server and display remote desktop
@@ -9,4 +8,4 @@ Icon=tigervnc
 Terminal=false
 Type=Application
 StartupWMClass=TigerVNC Viewer: Connection Details
-Categories=Network;Application;
+Categories=Network;RemoteAccess;
