--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 tigervnc-1.0.90-20100721svn4113.tar.bz2
 /tigervnc-1.0.90-20100813svn4123.tar.bz2
 /tigervnc-1.0.90-20101208svn4225.tar.bz2
+/tigervnc-1.0.90-20110117svn4237.tar.bz2
