--- a/vncserver.service
+++ b/vncserver.service
@@ -34,6 +34,7 @@ After=syslog.target network.target
 
 [Service]
 Type=forking
+ExecStartPre=/bin/sh -c '/usr/bin/vncserver -kill %i > /dev/null 2>&1 || :'
 ExecStart=/sbin/runuser -l <USER> -c "/usr/bin/vncserver %i"
 ExecStop=/sbin/runuser -l <USER> -c "/usr/bin/vncserver -kill %i"
 
