--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ tigervnc-1.0.90-20100721svn4113.tar.bz2
 /tigervnc-1.0.90-20110117svn4237.tar.bz2
 /tigervnc-1.0.90.tar.gz
 /tigervnc-1.1.0.tar.gz
+/tigervnc-1.2.80-20120905svn4996.tar.bz2
