Update to r5047 (X.Org 1.14 support)
Signed-off-by: Adam Tkac <atkac@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ tigervnc-1.0.90-20100721svn4113.tar.bz2
 /tigervnc-1.1.0.tar.gz
 /tigervnc-1.2.80-20120905svn4996.tar.bz2
 /tigervnc-1.2.80-20121126svn5015.tar.bz2
+/tigervnc-1.2.80-20130219svn5047.tar.bz2
