--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ tigervnc-1.0.90-20100721svn4113.tar.bz2
 /tigervnc-1.2.80-20120905svn4996.tar.bz2
 /tigervnc-1.2.80-20121126svn5015.tar.bz2
 /tigervnc-1.2.80-20130219svn5047.tar.bz2
+/tigervnc-1.2.80-20130307svn5060.tar.bz2
