Avoid PIDFile problems in systemd unit file (bug #983232).
Resolves: rhbz#983232

--- a/vncserver.service
+++ b/vncserver.service
@@ -34,11 +34,10 @@ Description=Remote desktop service (VNC)
 After=syslog.target network.target
 
 [Service]
-Type=forking
+Type=simple
 # Clean any existing files in /tmp/.X11-unix environment
 ExecStartPre=/bin/sh -c '/usr/bin/vncserver -kill %i > /dev/null 2>&1 || :'
-ExecStart=/sbin/runuser -l <USER> -c "/usr/bin/vncserver %i"
-ExecStop=/sbin/runuser -l <USER> -c "/usr/bin/vncserver -kill %i"
+ExecStart=/sbin/runuser -l <USER> -c "/usr/bin/vncserver -fg %i"
 
 [Install]
 WantedBy=multi-user.target
