Better fix for PIDFile problem (bug #983232).

--- a/vncserver.service
+++ b/vncserver.service
@@ -34,10 +34,12 @@ Description=Remote desktop service (VNC)
 After=syslog.target network.target
 
 [Service]
-Type=simple
+Type=forking
 # Clean any existing files in /tmp/.X11-unix environment
 ExecStartPre=/bin/sh -c '/usr/bin/vncserver -kill %i > /dev/null 2>&1 || :'
-ExecStart=/sbin/runuser -l <USER> -c "/usr/bin/vncserver -fg %i"
+ExecStart=/sbin/runuser -l <USER> -c "/usr/bin/vncserver %i"
+PIDFile=/home/<USER>/.vnc/%H%i.pid
+ExecStop=/bin/sh -c '/usr/bin/vncserver -kill %i > /dev/null 2>&1 || :'
 
 [Install]
 WantedBy=multi-user.target
