--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ tigervnc-1.0.90-20100721svn4113.tar.bz2
 /tigervnc-1.2.80-20130314svn5065.tar.bz2
 /tigervnc-1.3.0.tar.bz2
 /tigervnc-1.3.1.tar.gz
+/tigervnc-1.4.2.tar.gz
