--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ tigervnc-1.0.90-20100721svn4113.tar.bz2
 /tigervnc-49d0629dd87c0eb695d72dec7481e9169f55ae9e.tar.gz
 /tigervnc-1.5.0.tar.gz
 /tigervnc-1.5.90.tar.gz
+/tigervnc-1.6.0.tar.gz
