Update to 1.6.90 (1.7.0 beta)

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ tigervnc-1.0.90-20100721svn4113.tar.bz2
 /tigervnc-1.5.0.tar.gz
 /tigervnc-1.5.90.tar.gz
 /tigervnc-1.6.0.tar.gz
+/sources
+/tigervnc-1.6.90.tar.gz
