--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ tigervnc-1.0.90-20100721svn4113.tar.bz2
 /tigervnc-1.7.0.tar.gz
 /tigervnc-1.7.1.tar.gz
 /tigervnc-1.7.90.tar.gz
+/tigervnc-1.8.0.tar.gz
