--- a/vncserver.service
+++ b/vncserver.service
@@ -4,8 +4,6 @@
 # 1. Copy this file to /etc/systemd/system/vncserver@.service
 # 2. Replace <USER> with the actual user name and edit vncserver
 #    parameters appropriately
-#    (ExecStart=/usr/sbin/runuser -l <USER> -c "/usr/bin/vncserver %i"
-#     PIDFile=/home/<USER>/.vnc/%H%i.pid)
 # 3. Run `systemctl daemon-reload`
 # 4. Run `systemctl enable vncserver@:<display>.service`
 #
@@ -37,12 +35,18 @@ After=syslog.target network.target
 
 [Service]
 Type=forking
+WorkingDirectory=/home/<USER>
+User=<USER>
+Group=<USER>
 
-# Clean any existing files in /tmp/.X11-unix environment
-ExecStartPre=/bin/sh -c '/usr/bin/vncserver -kill %i > /dev/null 2>&1 || :'
-ExecStart=/usr/sbin/runuser -l <USER> -c "/usr/bin/vncserver %i"
 PIDFile=/home/<USER>/.vnc/%H%i.pid
-ExecStop=/bin/sh -c '/usr/bin/vncserver -kill %i > /dev/null 2>&1 || :'
+
+ExecStartPre=/bin/sh -c '/usr/bin/vncserver -kill %i > /dev/null 2>&1 || :'
+ExecStart=/usr/bin/vncserver -autokill %i
+ExecStop=/usr/bin/vncserver -kill %i
+
+Restart=on-success
+RestartSec=15
 
 [Install]
 WantedBy=multi-user.target
