--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ tigervnc-1.0.90-20100721svn4113.tar.bz2
 /tigervnc-1.7.90.tar.gz
 /tigervnc-1.8.0.tar.gz
 /tigervnc-1.8.90.tar.gz
+/tigervnc-1.9.0.tar.gz
