--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ tigervnc-1.0.90-20100721svn4113.tar.bz2
 /tigervnc-1.9.90.tar.gz
 /tigervnc-1.10.0.tar.gz
 /tigervnc-1.10.1.tar.gz
+/tigervnc-1.10.90.tar.gz
