--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ tigervnc-1.0.90-20100721svn4113.tar.bz2
 /tigervnc-1.10.90.tar.gz
 /tigervnc-1.11.0.tar.gz
 /tigervnc-1.11.90.tar.gz
+/tigervnc-1.12.0.tar.gz
